# Faster-Loadscreens

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
package/Data/MCM/Config/FasterLoadscreens/: config.json  settings.ini
src/: D3D11Compositor.cpp  D3D11Compositor.h  LoadingScreenManager.cpp  LoadingScreenManager.h  PCH.h  PerformancePatches.cpp  PerformancePatches.h  VRCompositorHelper.cpp  VRCompositorHelper.h  main.cpp
